feat udistrital/arka_cliente#843: Traslados
- Se reduce uso de map[string]interface{} reemplazando por los respectivos modelos
