# swagger/swagger.json
@@ -758,13 +758,13 @@
                 "tags": [
                     "salida"
                 ],
-                "description": "Realiza la aprobacion de una salida en caso de especificarse un Id, de lo contrario, genera los consecutivos de las salidas y hace el respectivo registro en api movimientos_arka_crud",
+                "description": "genera los consecutivos de las nuevas salidas generadas y hace el put en el api movimientos_arka_crud",
                 "operationId": "SalidaController.Post transaccion salidas asociadas a una entrada",
                 "parameters": [
                     {
                         "in": "query",
                         "name": "salidaId",
-                        "description": "Id del movimiento que se desea aprobar",
+                        "description": "Id de la salida original",
                         "type": "string"
                     },
                     {
@@ -965,7 +965,7 @@
                 "tags": [
                     "traslados"
                 ],
-                "description": "get Salida by id",
+                "description": "get Traslado by id",
                 "operationId": "TrasladosController.Get User",
                 "parameters": [
                     {
@@ -980,7 +980,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.DetalleTraslado"
+                            "$ref": "#/definitions/models.TrTraslado"
                         }
                     },
                     "404": {
@@ -1022,6 +1022,32 @@
         "models.Acta_recibido": {
             "title": "Acta_recibido",
             "type": "object"
+        },
+        "models.AreaTipo": {
+            "title": "AreaTipo",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "NumeroOrden": {
+                    "type": "number",
+                    "format": "double"
+                }
+            }
         },
         "models.AsignacionEspacioFisicoDependencia": {
             "title": "AsignacionEspacioFisicoDependencia",
@@ -1203,6 +1229,49 @@
                 }
             }
         },
+        "models.DatosIdentificacion": {
+            "title": "DatosIdentificacion",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CiudadExpedicion": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "DigitoVerificacion": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "DocumentoSoporte": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "FechaCreacion": {
+                    "type": "string"
+                },
+                "FechaExpedicion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Numero": {
+                    "type": "string"
+                },
+                "TerceroId": {
+                    "$ref": "#/definitions/models.Tercero"
+                },
+                "TipoDocumentoId": {
+                    "$ref": "#/definitions/models.TipoDocumento"
+                }
+            }
+        },
         "models.Dependencia": {
             "title": "Dependencia",
             "type": "object",
@@ -1222,25 +1291,11 @@
                 }
             }
         },
-        "models.DetalleTraslado": {
-            "title": "DetalleTraslado",
+        "models.DetalleElementoPlaca": {
+            "title": "DetalleElementoPlaca",
             "type": "object",
             "properties": {
-                "Consecutivo": {
-                    "type": "string"
-                },
-                "Elementos": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer",
-                        "format": "int64"
-                    }
-                },
-                "FuncionarioDestino": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "FuncionarioOrigen": {
+                "ElementoActaId": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1248,14 +1303,72 @@
                     "type": "integer",
                     "format": "int64"
                 },
-                "MovimientoId": {
+                "Marca": {
+                    "type": "string"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "Placa": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.DetalleFuncionario": {
+            "title": "DetalleFuncionario",
+            "type": "object",
+            "properties": {
+                "Cargo": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Parametro"
+                    }
+                },
+                "Correo": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.InfoComplementariaTercero"
+                    }
+                },
+                "Tercero": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.DetalleTercero"
+                    }
+                }
+            }
+        },
+        "models.DetalleSedeDependencia": {
+            "title": "DetalleSedeDependencia",
+            "type": "object",
+            "properties": {
+                "Dependencia": {
+                    "$ref": "#/definitions/models.Dependencia"
+                },
+                "Sede": {
+                    "$ref": "#/definitions/models.EspacioFisico"
+                },
+                "Ubicacion": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
+        "models.DetalleTercero": {
+            "title": "DetalleTercero",
+            "type": "object",
+            "properties": {
+                "DependenciaId": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "Observaciones": {
-                    "type": "string"
+                "Identificacion": {
+                    "$ref": "#/definitions/models.DatosIdentificacion"
                 },
-                "Ubicacion": {
+                "Tercero": {
+                    "$ref": "#/definitions/models.Tercero"
+                },
+                "TipoVinculacion": {
                     "type": "integer",
                     "format": "int64"
                 }
@@ -1468,13 +1581,8 @@
                 "CodigoAbreviacion": {
                     "type": "string"
                 },
-                "FechaCreacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "FechaModificacion": {
-                    "type": "string",
-                    "format": "datetime"
+                "Descripcion": {
+                    "type": "string"
                 },
                 "Id": {
                     "type": "integer",
@@ -1483,8 +1591,19 @@
                 "Nombre": {
                     "type": "string"
                 },
+                "TipoEdificacionId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
                 "TipoEspacio": {
                     "$ref": "#/definitions/models.TipoEspacio"
+                },
+                "TipoEspacioFisicoId": {
+                    "$ref": "#/definitions/models.TipoEspacioFisicoV2"
+                },
+                "TipoTerrenoId": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         },
@@ -1586,6 +1705,78 @@
                 }
             }
         },
+        "models.GrupoInfoComplementaria": {
+            "title": "GrupoInfoComplementaria",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.InfoComplementaria": {
+            "title": "InfoComplementaria",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "GrupoInfoComplementariaId": {
+                    "$ref": "#/definitions/models.GrupoInfoComplementaria"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "TipoDeDato": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.InfoComplementariaTercero": {
+            "title": "InfoComplementariaTercero",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "Dato": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "InfoCompleTerceroPadreId": {
+                    "$ref": "#/definitions/models.InfoComplementariaTercero"
+                },
+                "InfoComplementariaId": {
+                    "$ref": "#/definitions/models.InfoComplementaria"
+                },
+                "TerceroId": {
+                    "$ref": "#/definitions/models.Tercero"
+                }
+            }
+        },
         "models.Movimiento": {
             "title": "Movimiento",
             "type": "object",
@@ -1642,6 +1833,38 @@
                 },
                 "RolOrdenadorGasto": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Parametro": {
+            "title": "Parametro",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "NumeroOrden": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "ParametroPadreId": {
+                    "$ref": "#/definitions/models.Parametro"
+                },
+                "TipoParametroId": {
+                    "$ref": "#/definitions/models.TipoParametro"
                 }
             }
         },
@@ -1712,6 +1935,53 @@
                 }
             }
         },
+        "models.Tercero": {
+            "title": "Tercero",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "FechaCreacion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "FechaNacimiento": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "LugarOrigen": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "NombreCompleto": {
+                    "type": "string"
+                },
+                "PrimerApellido": {
+                    "type": "string"
+                },
+                "PrimerNombre": {
+                    "type": "string"
+                },
+                "SegundoApellido": {
+                    "type": "string"
+                },
+                "SegundoNombre": {
+                    "type": "string"
+                },
+                "TipoContribuyenteId": {
+                    "$ref": "#/definitions/models.TipoContribuyente"
+                },
+                "UsuarioWSO2": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Terceros": {
             "title": "Terceros",
             "type": "object"
@@ -1743,6 +2013,66 @@
                 },
                 "Nombre": {
                     "type": "string"
+                }
+            }
+        },
+        "models.TipoContribuyente": {
+            "title": "TipoContribuyente",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.TipoDocumento": {
+            "title": "TipoDocumento",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "NumeroOrden": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         },
@@ -1810,6 +2140,28 @@
                 }
             }
         },
+        "models.TipoEspacioFisicoV2": {
+            "title": "TipoEspacioFisicoV2",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                }
+            }
+        },
         "models.TipoNivel": {
             "title": "TipoNivel",
             "type": "object",
@@ -1836,6 +2188,41 @@
                 }
             }
         },
+        "models.TipoParametro": {
+            "title": "TipoParametro",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "AreaTipoId": {
+                    "$ref": "#/definitions/models.AreaTipo"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "NumeroOrden": {
+                    "type": "number",
+                    "format": "double"
+                }
+            }
+        },
         "models.TrSalida": {
             "title": "TrSalida",
             "type": "object",
@@ -1854,6 +2241,33 @@
         "models.TrSalida2": {
             "title": "TrSalida2",
             "type": "object"
+        },
+        "models.TrTraslado": {
+            "title": "TrTraslado",
+            "type": "object",
+            "properties": {
+                "Detalle": {
+                    "type": "string"
+                },
+                "Elementos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.DetalleElementoPlaca"
+                    }
+                },
+                "FuncionarioDestino": {
+                    "$ref": "#/definitions/models.DetalleFuncionario"
+                },
+                "FuncionarioOrigen": {
+                    "$ref": "#/definitions/models.DetalleFuncionario"
+                },
+                "Observaciones": {
+                    "type": "string"
+                },
+                "Ubicacion": {
+                    "$ref": "#/definitions/models.DetalleSedeDependencia"
+                }
+            }
         },
         "models.Tr_cuentas_subgrupo": {
             "title": "Tr_cuentas_subgrupo",
